SFDCProject/src/objects/SunRun_Audit_Data__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Sunrun_Audit_Email_Signature_Address__c</fullName>
        <label>Sunrun Audit Email Signature Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunrun_Audit_Email_Signature_Name__c</fullName>
        <label>Sunrun Audit Email Signature Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sunrun_Audit_Email_Signature_Title__c</fullName>
        <label>Sunrun Audit Email Signature Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SunRun Audit Data</label>
</CustomObject>